Fixed text-alignment on Music tab

--- a/public/default.css
+++ b/public/default.css
@@ -179,7 +179,7 @@ header {
 .music p{
     font-size: 24px;
     margin: auto;
-    width: 60%;
+    width: 80%;
     text-align: center;
     padding-bottom: 40px;
     line-height: 1.5;
